5 % hypotéza vůči alternativě

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -453,7 +453,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "Testovaná hodnota EX=K=2 v intervalu neleží, takže můžeme hypotézu vyváženosti na hladině významnosti 5% zamítnout ve prosěc"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -490,6 +492,19 @@
    "name": "R",
    "pygments_lexer": "r",
    "version": "3.5.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": false,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
