Pridani Urban a Rural textu

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -444,17 +444,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 144,
+   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-10T18:41:26.612068Z",
      "start_time": "2018-12-10T18:41:26.595Z"
     }
    },
-   "outputs": [],
    "source": [
-    "Testovaná hodnota EX=K=2 v intervalu neleží, takže můžeme hypotézu vyváženosti na hladině významnosti 5% zamítnout ve prosěc"
+    "* Rural: Testovaná hodnota EX=K=2 v intervalu neleží, takže můžeme hypotézu vyváženosti na hladině významnosti 5% zamítnout ve prospěch alternativy, že je pravděpodobnost, že EX=2 je významně odlišná."
    ]
   },
   {
