--- a/homework.ipynb
+++ b/homework.ipynb
@@ -452,7 +452,9 @@
     }
    },
    "source": [
-    "* Rural: Testovaná hodnota EX=K=2 v intervalu neleží, takže můžeme hypotézu vyváženosti na hladině významnosti 5% zamítnout ve prospěch alternativy, že je pravděpodobnost, že EX=2 je významně odlišná."
+    "Rural: Testovaná hodnota EX=K=2 v intervalu neleží, takže můžeme hypotézu vyváženosti na hladině významnosti 5% zamítnout ve prospěch alternativy, že je pravděpodobnost, že EX=2 je významně odlišná.\n",
+    "\n",
+    "Urban: Testovaná hodnota EX=K=2 v intervalu neleží, takže můžeme hypotézu vyváženosti na hladině významnosti 5% zamítnout ve prospěch alternativy, že je pravděpodobnost, že EX=2 je významně odlišná."
    ]
   },
   {
