--- a/homework.ipynb
+++ b/homework.ipynb
@@ -446,23 +446,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in t.test.default(rural, y = 2, alternative = \"two.sided\", conf.level = 0.95): not enough 'y' observations\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in t.test.default(rural, y = 2, alternative = \"two.sided\", conf.level = 0.95): not enough 'y' observations\nTraceback:\n",
-      "1. t.test(rural, y = 2, alternative = \"two.sided\", conf.level = 0.95)",
-      "2. t.test.default(rural, y = 2, alternative = \"two.sided\", conf.level = 0.95)",
-      "3. stop(\"not enough 'y' observations\")"
-     ]
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tOne Sample t-test\n",
+       "\n",
+       "data:  urban\n",
+       "t = 36.106, df = 44, p-value < 2.2e-16\n",
+       "alternative hypothesis: true mean is not equal to 2\n",
+       "95 percent confidence interval:\n",
+       " 204.8733 228.8600\n",
+       "sample estimates:\n",
+       "mean of x \n",
+       " 216.8667 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tOne Sample t-test\n",
+       "\n",
+       "data:  rural\n",
+       "t = 34.167, df = 48, p-value < 2.2e-16\n",
+       "alternative hypothesis: true mean is not equal to 2\n",
+       "95 percent confidence interval:\n",
+       " 147.8785 166.1215\n",
+       "sample estimates:\n",
+       "mean of x \n",
+       "      157 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "t.test(rural, y=2, alternative=\"two.sided\", conf.level = 0.95)"
+    "t.test(urban, mu=2, alternative=\"two.sided\", conf.level = 0.95)\n",
+    "t.test(rural, mu=2, alternative=\"two.sided\", conf.level = 0.95)"
    ]
   },
   {
