added last part

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -515,18 +515,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Z povahy testovaných skupin můžeme předpokládat, že střední hodnota cholesterolu u indiánů žijícich ve měste bude větší něž u tich žijícich na venkově.\n",
+    "Proto vyberáme alternativní hypotézu H_A: EU > ER"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-10T18:41:27.274840Z",
      "start_time": "2018-12-10T18:41:27.260Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Střední hodnota pro urban EU = 216.8667 \n",
+      "Střední hodnota pro rural ER = 157 \n",
+      "Testujeme hypotézu H_0: EU = ER proti alternativě H_A: EU > ER\n",
+      "Jednostranný konfidenční interval pro EU je ( 208.9126 , +nekonecno )\n",
+      "Střední hodnota ER= 157 je menší než dolní hranice intervalu 208.9126 \n",
+      "Hypotézu H_0 na hladině významnosti 5% můžeme zamítnout ve prospěch alternativy, že EU > ER\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "EU <- mean(urban)\n",
+    "ER <- mean(rural)\n",
+    "n <- length(urban)\n",
+    "\n",
+    "error <- qt(0.95, df=n-1)*s/sqrt(n)\n",
+    "\n",
+    "cat(\"Střední hodnota pro urban EU =\",EU,\"\\n\")\n",
+    "cat(\"Střední hodnota pro rural ER =\",ER,\"\\n\")\n",
+    "cat(\"Testujeme hypotézu H_0: EU = ER proti alternativě H_A: EU > ER\\n\")\n",
+    "cat(\"Jednostranný konfidenční interval pro EU je (\",EU-error,\", +nekonecno )\\n\")\n",
+    "cat(\"Střední hodnota ER=\",ER,\"je menší než dolní hranice intervalu\",EU-error,\"\\n\")\n",
+    "cat(\"Hypotézu H_0 na hladině významnosti 5% můžeme zamítnout ve prospěch alternativy, že EU > ER\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -541,7 +580,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.1"
+   "version": "3.3.3"
   },
   "toc": {
    "base_numbering": 1,
