--- a/homework.ipynb
+++ b/homework.ipynb
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -489,8 +489,11 @@
     }
    ],
    "source": [
-    "t.test(urban, mu=2, alternative=\"two.sided\", conf.level = 0.95)\n",
-    "t.test(rural, mu=2, alternative=\"two.sided\", conf.level = 0.95)"
+    "alternative <- \"two.sided\"\n",
+    "K_parameter <- 2\n",
+    "conf_level <- 0.95\n",
+    "t.test(urban, mu=K_parameter, alternative=alternative, conf.level = conf_level)\n",
+    "t.test(rural, mu=K_parameter, alternative=alternative, conf.level = conf_level)"
    ]
   },
   {
@@ -580,7 +583,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.3.3"
+   "version": "3.5.1"
   },
   "toc": {
    "base_numbering": 1,
