--- a/homework.ipynb
+++ b/homework.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### Vypracovali (všichni cvičení st 14:30)\n",
     "- Matyáš Skalický (skalimat)\n",
-    "- Ondřej Vastl (**T O D O**)\n",
+    "- Martin Vastl (vastlmar)\n",
     "- Maťo Choma (**T O D O**)\n",
     "\n",
     "### Popis dat\n",
