created pdf output

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -10,7 +10,7 @@
     "### Vypracovali (všichni cvičení st 14:30)\n",
     "- Matyáš Skalický (skalimat)\n",
     "- Martin Vastl (vastlmar)\n",
-    "- Maťo Choma (**T O D O**)\n",
+    "- Matej Choma (chomamat)\n",
     "\n",
     "### Popis dat\n",
     "Dataset pochází ze studie provedené na guatemalských indiánech. Míra cholesterolu byla změřena celkem 94 jedincům a byl zaznamenán jejich původ. Bylo naměřeno 49 pozorování na venkově a 45 ve městě.\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-17T15:36:32.291100Z",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-17T15:36:33.137973Z",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-17T15:36:35.671201Z",
@@ -95,16 +95,16 @@
      "output_type": "stream",
      "text": [
       "Rural area indians:\n",
-      "EX = 157 \n",
-      "varX = 1008.458 \n",
+      "ER = 157 \n",
+      "varR = 1008.458 \n",
       "median = 152"
      ]
     }
    ],
    "source": [
     "cat(\"Rural area indians:\\n\")\n",
-    "cat(\"EX =\", mean(rural), \"\\n\")\n",
-    "cat(\"varX =\", var(rural), \"\\n\")\n",
+    "cat(\"ER =\", mean(rural), \"\\n\")\n",
+    "cat(\"varR =\", var(rural), \"\\n\")\n",
     "cat(\"median =\", median(rural))"
    ]
   },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-17T15:36:37.635974Z",
@@ -135,16 +135,16 @@
      "output_type": "stream",
      "text": [
       "Urban area indians:\n",
-      "EX = 216.8667 \n",
-      "varX = 1593.618 \n",
+      "EU = 216.8667 \n",
+      "varU = 1593.618 \n",
       "median = 206"
      ]
     }
    ],
    "source": [
     "cat(\"Urban area indians:\\n\")\n",
-    "cat(\"EX =\", mean(urban), \"\\n\")\n",
-    "cat(\"varX =\", var(urban), \"\\n\")\n",
+    "cat(\"EU =\", mean(urban), \"\\n\")\n",
+    "cat(\"varU =\", var(urban), \"\\n\")\n",
     "cat(\"median =\", median(urban))"
    ]
   },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-17T15:41:22.827711Z",
@@ -404,12 +404,12 @@
     }
    ],
    "source": [
-    "ex <- mean(urban)\n",
+    "EU <- mean(urban)\n",
     "s <- sd(urban)\n",
     "n <- length(urban)\n",
     "error <- qt(0.975, df=n-1)*s/sqrt(n)\n",
-    "left <- ex-error\n",
-    "right <- ex+error\n",
+    "left <- EU-error\n",
+    "right <- EU+error\n",
     "\n",
     "cat(\"oboustranný 95% konfidenční interval pro střední hodnotu urban:\\n\")\n",
     "cat(\"(\",left, \", \", right, \")\\n\")"
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-17T15:41:23.028776Z",
@@ -436,12 +436,12 @@
     }
    ],
    "source": [
-    "ex <- mean(rural)\n",
+    "ER <- mean(rural)\n",
     "s <- sd(rural)\n",
     "n <- length(rural)\n",
     "error <- qt(0.975, df=n-1)*s/sqrt(n)\n",
-    "left <- ex-error\n",
-    "right <- ex+error\n",
+    "left <- ER-error\n",
+    "right <- ER+error\n",
     "\n",
     "cat(\"oboustranný 95% konfidenční interval pro střední hodnotu rural:\\n\")\n",
     "cat(\"(\",left, \", \", right, \")\\n\")"
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-17T15:41:40.635874Z",
@@ -558,11 +558,7 @@
      "text": [
       "Střední hodnota pro urban EU = 216.8667 \n",
       "Střední hodnota pro rural ER = 157 \n",
-      "\n",
-      "Testujeme hypotézu H_0: EU = ER proti alternativě H_A: EU > ER\n",
-      "Jednostranný konfidenční interval pro EU je ( 208.9126 , +nekonecno )\n",
-      "Střední hodnota ER = 157 je menší než dolní hranice intervalu 208.9126 \n",
-      "Hypotézu H_0 na hladině významnosti 5% můžeme zamítnout ve prospěch alternativy že EU > ER\n"
+      "Spodná hranica jednostranního konfidenčního intervalu pro EU je:  208.9126 \n"
      ]
     }
    ],
@@ -574,12 +570,16 @@
     "error <- qt(0.95, df=n-1)*s/sqrt(n)\n",
     "\n",
     "cat(\"Střední hodnota pro urban EU =\",EU,\"\\n\")\n",
-    "cat(\"Střední hodnota pro rural ER =\",ER,\"\\n\\n\")\n",
-    "cat(\"Testujeme hypotézu H_0: EU = ER proti alternativě H_A: EU > ER\\n\")\n",
-    "cat(\"Jednostranný konfidenční interval pro EU je (\",EU-error,\", +nekonecno )\\n\")\n",
-    "cat(\"Střední hodnota ER =\",ER,\"je menší než dolní hranice intervalu\",EU-error,\"\\n\")\n",
-    "cat(\"Hypotézu H_0 na hladině významnosti 5% můžeme zamítnout ve prospěch alternativy že EU > ER\\n\")"
+    "cat(\"Střední hodnota pro rural ER =\",ER,\"\\n\")\n",
+    "cat(\"Spodná hranica jednostranního konfidenčního intervalu pro EU je: \",EU-error,\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -594,7 +594,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.1"
+   "version": "3.3.3"
   },
   "toc": {
    "base_numbering": 1,
