--- a/homework.tex
+++ b/homework.tex
@@ -671,8 +671,8 @@ aby vaše volba nejlépe korespondovala s povahou zkoumaného problému.
 \end{quote}
 
 \noindent Z povahy testovaných skupin můžeme předpokládat, že střední hodnota
-cholesterolu u indiánů žijícich ve měste bude větší něž u tich žijícich
-na venkově. Proto vyberáme alternativní hypotézu $H_A:\ EU > ER$
+cholesterolu u indiánů žijících ve městě bude vyšší, něž u těch žijících
+na venkově. Proto vybíráme alternativní hypotézu $H_A:\ EU > ER$
 
     \begin{Verbatim}[commandchars=\\\{\}]
 {\color{incolor}In [{\color{incolor}9}]:} EU \PY{o}{\PYZlt{}\PYZhy{}} \PY{k+kp}{mean}\PY{p}{(}urban\PY{p}{)}
@@ -683,19 +683,19 @@ na venkově. Proto vyberáme alternativní hypotézu $H_A:\ EU > ER$
         
         \PY{k+kp}{cat}\PY{p}{(}\PY{l+s}{\PYZdq{}}\PY{l+s}{Střední hodnota pro urban EU =\PYZdq{}}\PY{p}{,}EU\PY{p}{,}\PY{l+s}{\PYZdq{}}\PY{l+s}{\PYZbs{}n\PYZdq{}}\PY{p}{)}
         \PY{k+kp}{cat}\PY{p}{(}\PY{l+s}{\PYZdq{}}\PY{l+s}{Střední hodnota pro rural ER =\PYZdq{}}\PY{p}{,}ER\PY{p}{,}\PY{l+s}{\PYZdq{}}\PY{l+s}{\PYZbs{}n\PYZdq{}}\PY{p}{)}
-        \PY{k+kp}{cat}\PY{p}{(}\PY{l+s}{\PYZdq{}}\PY{l+s}{Spodná hranica jednostranního konfidenčního intervalu pro EU je: \PYZdq{}}\PY{p}{,}EU\PY{o}{\PYZhy{}}error\PY{p}{,}\PY{l+s}{\PYZdq{}}\PY{l+s}{\PYZbs{}n\PYZdq{}}\PY{p}{)}
+        \PY{k+kp}{cat}\PY{p}{(}\PY{l+s}{\PYZdq{}}\PY{l+s}{Spodní hranice jednostranného konfidenčního intervalu pro EU je:\PYZdq{}}\PY{p}{,}EU\PY{o}{\PYZhy{}}error\PY{p}{,}\PY{l+s}{\PYZdq{}}\PY{l+s}{\PYZbs{}n\PYZdq{}}\PY{p}{)}
 \end{Verbatim}
 
     \begin{Verbatim}[commandchars=\\\{\}]
 Střední hodnota pro urban EU = 216.8667 
 Střední hodnota pro rural ER = 157 
-Spodná hranica jednostranního konfidenčního intervalu pro EU je:  208.9126 
+Spodní hranice jednostranného konfidenčního intervalu pro EU je: 208.9126 
     \end{Verbatim}
 
 \noindent Testujeme hypotézu $H_0:\ EU = ER$ proti alternativě $H_A:\ EU > ER$. 
 Jednostranný $95\%$ konfidenční interval pro $EU$ je $(208,9126,+\infty)$. 
 Střední hodnota $ER = 157$ je menší než dolní hranice intervalu $208,9126$. 
-Hypotézu $H_0$ na hladině významnosti $5\%$ můžeme tedy zamítnout ve prospěch alternativy že $EU > ER$.
+Hypotézu $H_0$ na hladině významnosti $5\%$ můžeme tedy zamítnout ve prospěch alternativy $EU > ER$.
 
     % Add a bibliography block to the postdoc
     
