opravena chyba v ukol 7

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-17T15:36:33.137973Z",
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-12-17T15:41:40.635874Z",
@@ -558,13 +558,14 @@
      "text": [
       "Střední hodnota pro urban EU = 216.8667 \n",
       "Střední hodnota pro rural ER = 157 \n",
-      "Spodná hranica jednostranního konfidenčního intervalu pro EU je:  208.9126 \n"
+      "Spodná hranica jednostranního konfidenčního intervalu pro EU je:  206.8677 \n"
      ]
     }
    ],
    "source": [
     "EU <- mean(urban)\n",
     "ER <- mean(rural)\n",
+    "s <- sd(urban)\n",
     "n <- length(urban)\n",
     "\n",
     "error <- qt(0.95, df=n-1)*s/sqrt(n)\n",
@@ -572,6 +573,58 @@
     "cat(\"Střední hodnota pro urban EU =\",EU,\"\\n\")\n",
     "cat(\"Střední hodnota pro rural ER =\",ER,\"\\n\")\n",
     "cat(\"Spodná hranica jednostranního konfidenčního intervalu pro EU je: \",EU-error,\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testujeme hypotézu H_0 : EU = ER proti alternativě H_A : EU > ER. Jednostranný 95% konfidenční interval pro EU je ( 208, 9126, + ∞ ) . Střední hodnota ER = 157 je menší než dolní hranice intervalu 208, 9126. Hypotézu H_0 na hladině významnosti 5% můžeme tedy zamítnout ve\n",
+    "prospěch alternativy EU > ER."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Střední hodnota pro urban EU = 216.8667 \n",
+      "Střední hodnota pro rural ER = 157 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tOne Sample t-test\n",
+       "\n",
+       "data:  urban\n",
+       "t = 10.06, df = 44, p-value = 2.777e-13\n",
+       "alternative hypothesis: true mean is greater than 157\n",
+       "95 percent confidence interval:\n",
+       " 206.8677      Inf\n",
+       "sample estimates:\n",
+       "mean of x \n",
+       " 216.8667 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "EU <- mean(urban)\n",
+    "ER <- mean(rural)\n",
+    "cat(\"Střední hodnota pro urban EU =\",EU,\"\\n\")\n",
+    "cat(\"Střední hodnota pro rural ER =\",ER,\"\\n\")\n",
+    "\n",
+    "alternative <- \"greater\"\n",
+    "conf_level <- 0.95\n",
+    "t.test(urban, mu=ER, alternative=alternative, conf.level = conf_level)"
    ]
   },
   {
